<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/adriana_chionetti_rhkgssfniji_unsplash"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="180dp"
            android:layout_height="134dp"
            android:layout_marginStart="125dp"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/logooftheapp"
            app:srcCompat="@drawable/campusbyte" />


        <TextView
            android:id="@+id/AppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="130dp"
            android:text="@string/campus_bytes"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="130dp" />
        <TextView
            android:id="@+id/Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="30dp"
            android:text="@string/mobile_developer_district_six"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="30dp" />

        <EditText
            android:id="@+id/search"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="300dp"
            android:background="@drawable/rounded_button"
            android:ems="10"
            android:hint="@string/search"
            android:inputType="text"
            android:textColorHint="#B3FFFFFF"
            android:drawableRight="@drawable/search"

            android:drawableEnd="@drawable/search"
            android:autofillHints=""
            android:layout_marginStart="90dp" />
        <TextView
        android:id="@+id/About"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="30dp"
        android:text="@string/about"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="25sp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="30dp" />

        <TextView
        android:id="@+id/AboutInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="30dp"
        android:text="@string/campus_byte_is_an_application_used_by_university_or_college_campuses_where_students_will_be_able_to_order_their_meals_online" android:textColor="#FFFFFF"
        android:textSize="20sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/AboutInfo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="530dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="30dp"
            android:text="@string/the_purpose_of_the_application_is_to_improve_productivity_and_efficiency_of_university_goers_they_will_not_waste_time_leaving_a_lecture_or_study_session_to_go_and_buy_a_meal_this_app_will_make_it_possible_for_users_to_order_their_meals_when_they_are_unable_to_physically_go_to_the_cafeteria" android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp" />


        />
        <TextView
            android:id="@+id/Aim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="730dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="30dp"
            android:text="@string/aim"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="30dp" />
        <TextView
            android:id="@+id/AboutInfo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="770dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="30dp"
            android:text="@string/our_aim_is_to_create_a_more_efficient_way_for_users_to_grab_meals_between_lectures_and_meetings_it_eliminates_the_process_of_going_to_the_cafeteria_and_waiting_in_a_queue_when_you_are_in_a_rush_this_also_ties_in_well_with_the_current_global_pandemic_as_some_students_returning_to_residence_may_want_to_order_meals_in_a_safer_way" android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp" />



    </RelativeLayout>

</ScrollView>