<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="0dp"
        android:background="#1D393E"
        android:layout_gravity="center"

        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/logooftheapp"
            android:src="@drawable/campusbyte" />

        <TextView
            android:id="@+id/desciption"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="30dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/enter_your_email_address_and_we_ll_send_you_a_link_to_reset_your_password"
            android:textColor="#EB8117"
            android:textStyle="italic"
            android:textSize="20sp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="30dp" />

        <EditText
            android:id="@+id/et-Email"
            android:layout_width="250dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:padding="10dp"
            android:background="@drawable/layout"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="10dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColorHint="@android:color/background_dark"
            android:autofillHints=""
            android:drawableStart="@drawable/email" />

        <Button
            android:id="@+id/Link"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonlayout"
            android:text="@string/send_link"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/not_a_member_yet_sign_up"
            android:textColor="#EB8117"
            android:textSize="15sp"
            android:layout_marginEnd="5dp" />

    </LinearLayout>


</LinearLayout>